# selenoprofiles4

./: Dockerfile  LICENSE  MANIFEST.in  README.md  meta.yaml  selenoprofiles_config.txt  setup.cfg  setup.py
.github/workflows/: build_and_upload.yml  conda_upload.yml  continuous_integration.yml  docker.yml
condabuild/: build.sh  install.sh
docs/: advanced.rst  citation.rst  conf.py  docker.rst  get_started.rst  index.rst  installation.rst  multiple_targets.rst  pipeline_detailed.rst  requirements.txt  troubleshooting.rst  user_profiles.rst  utilities.rst  workflow.rst
docs/files/: example.p2g
src/selenoprofiles4/: MMlib3.py  __init__.py  _version.py  blaster_parser.awk  load_config.py  selenoprofiles4.py  selenoprofiles_4.py  selenoprofiles_assess.py  selenoprofiles_build_profile.py  selenoprofiles_database.py  selenoprofiles_evolution.py  selenoprofiles_join_alignments.py  selenoprofiles_lineage.py  selenoprofiles_orthology.py  selenoprofiles_test.py  selenoprofiles_tree_drawer.py
src/selenoprofiles4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/selenoprofiles4/tests/: test_sequences.fa  test_sequences.fa.nsd  test_sequences.fa.nsi  test_sequences.fa.nsq  test_sequences.index
tests/: test_sequences.fa.nhr  test_sequences.fa.nin  test_sequences.lengths
