[metadata]
name = selenoprofiles4
version = attr: selenoprofiles4._version.__version__
author = Marco Mariotti
author_email = marco.mariotti@ub.edu
description = Gene finding pipeline for selenoprotein and selenocysteine machinery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marco-mariotti/selenoprofiles4
project_urls =
https://github.com/marco-mariotti/selenoprofiles4
    Github Website=https://github.com/marco-mariotti 

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6,<3.9
install_requires =
  biopython >=1.46
  networkx
  requests >=2.27
  obonet >=0.2.3
  networkx >=3.0
  easyterm >= 1.0.0
  pandas == 1.3.5
  pyranges==0.0.120
  pyfaidx==0.8.1.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    selenoprofiles=selenoprofiles4.selenoprofiles4:main
